# Tree-algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
QtTrees/: AVLTree.h  Canvas.h  RedBlackTree.h  SplayTree.h  TreeAdapter.h  Trees.pro  Vertex.cpp  Vertex.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optimalbst.cpp  optimalbst.h
UML/: RedBlack.vpp  SplayTree.vpp  VisualQT.vpp  avl_tree.vpp  avl_tree.vpp.bak_000f  avl_tree.vpp.bak_001d  avl_tree.vpp.bak_002d  optiamal-bst.vpp.bak_000f  optimal-bst.vpp  optimal-bst.vpp.bak_000f  optimal-bst.vpp.bak_001d  optimal-bst.vpp.bak_002d  optimal-bst.vpp.bak_003d  persistent-red-black-tree.vpp  persistent-red-black-tree.vpp.bak_000f  persistent-red-black-tree.vpp.bak_001d  red-black-tree.vpp
UML/diagrams/: AVL.vpp  RedBlack.vpp
docs/: GI documentation.docx
includes/: AVL_Tree.h  Calculator.h  Optimal_BST.h  Persistent RBT.h  Persistent_RBT.h  RBTreeNode.h  RedBlackTree.h  SplayTree.h  TreeIter.h
src/: Calculator.cpp
unit-tests/: AVLTreeTests.cpp  BSTTest.cpp  RedBlackTest.cpp  SplayTests.cpp  tests-avl-tree.cpp  tests-calculator.cpp  tests-optimal-tree.cpp  tests-red-black-tree.cpp  tests-splay-tree.cpp
